#103 OpenApiRequestHelper httpClient 로 교체. xml 의 attribuite 값 읽어오는것 추가.
git-svn-id: http://svn.pentome.com/isyoon/trunk@97 ea5790a9-a2b4-4b5f-b68c-306463eac401